--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-        &copy; {{ "now"|date("Y") }} Kora TV. All Rights Reserved.
+        &copy; {{ current_year }} Kora TV. All Rights Reserved.
     </footer>
 </body>
 </html>
